--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,12 @@
 site_name: Computer Based Problem Solving
+nav:
+  - Home: index.md
+  - Preface: preface.md
+  - 'Introduction': 
+    - 'What is Programming' : 'what-is-programming.md'
+    - 'Goal of this book' : 'goal-of-this-book.md'
+  - Problem Solving: 
+    - 'Steps in Problem Solving' : 'steps-in-problem-solving.md'
 theme:
   name: material
   logo: assets/CS.svg
